# creditfraud

./: .gitignore  .python-version  LICENSE  Makefile  README.md  directory_updated.txt  environment.yml  generate_yml.py  pyproject.toml  requirements.txt  setup.cfg
creditfraud/docs/docs/: index.md
creditfraud/frauddetection/data/: smote.py
creditfraud/frauddetection/modeling/: predict.py  train.py
creditfraud/frauddetection/models/dt/: XGHist_baseline.py  histogram.py  tree1.py  utils.py  xghist_classifier.py
creditfraud/notebooks/: EDA.ipynb
creditfraud/scripts/: format_selected_files.sh  run_xghist_comparison.py  test_small.py  utils_logs.py
creditfraud/tests/: spark.py  test_xG.py
docs/: mkdocs.yml
frauddetection/: __init__.py  dataset.py  features.py  plots.py
models/dt/: __init__.py  criterion.py  decisiontree.py  gradient_boosting.py  loss_functions.py  splitter.py  tree.py
notebooks/: Credit fraud notebook.ipynb  EDA.ipynb  smote.ipynb
tests/: test_all.py
