[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "creditfraud" 
version = "0.0.1"
description = "The goal of this project is to leverage various predictive models to accurately distinguish between normal payments and fraudulent transactions."
authors = [
  { name = "Mahd Sardar, Govind Sreenivasan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.3"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
]
packages = [{include = "frauddetection", from = "creditfraud"}]  # Add this line

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "ruff",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["frauddetection"]
force-sort-within-sections = true
